--- a/AluguelCarros/AluguelCarros.Web/Web.config
+++ b/AluguelCarros/AluguelCarros.Web/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AluguelCarros.Web-20180630075432.mdf;Initial Catalog=aspnet-AluguelCarros.Web-20180630075432;Integrated Security=True"
+  <add name="AluguelCarrosDB_Nayara" connectionString="Data Source=(localdb)\MSSQLLocaldb;Initial Catalog=AluguelCarrosDB_Nayara;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
